<resources>
    <string name="app_name">BelajarAndroid</string>
    <string name="text_textview">TextView</string>
    <string name="text_subtitle_textview">Bekerja dengan textview</string>
    <string name="text_button">Button</string>
    <string name="text_option_menu">Option menu</string>
    <string name="text_subtitle_button">Bekerja dengan button</string>
    <string name="text_subtitle_option_menu">Bekerja degan option menu</string>
    <string name="button_1">Button 1</string>
    <string name="outline_button">outline button</string>
    <string name="text_text_button">Text Button</string>
    <string name="icon_button">icon button</string>
    <string name="text_menu_profile">Profile</string>
    <string name="text_menu_likes">Likes</string>
    <string name="text_menu_search">Search</string>
    <string name="text_edittext_menu">EditText</string>
    <string name="text_subtitle_edittext_menu">Bekerja dengan EditText</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_menu_edit">Edit</string>
    <string name="text_menu_delete">Delete</string>
    <string name="text_menu_favorite">Favorite</string>
    <string name="button_more">More</string>
    <string name="text_dialog_menu">Dialog</string>
    <string name="text_subtitle_dialog_menu">Confirmation dialog, input dialog</string>
    <string name="title_delete_confirm">Delete confirmation</string>
    <string name="message_delete_confirmation">Are you sure wanna delete this?</string>
    <string name="button_yes">yes</string>
    <string name="button_cancel">cancel</string>
    <string name="text_input_your_name">Input your name</string>
    <string name="title_input_your_name">Input your name</string>
    <string name="text_name">Name</string>
    <string name="button_submit">Submit</string>
    <string name="hint_name">Name</string>
    <string name="text_autocomplete_menu">Auto Complete Textview</string>
    <string name="text_subtitle_autocomplete_menu">Implement autocomplete textview</string>
    <string name="text_android_name_version">Android name version</string>
</resources>